--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.12",
+    "@react-navigation/stack": "^6.3.23",
+    "axios": "^1.6.7",
+    "config": "^3.3.11",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "^0.73.4",
+    "react-native-config": "^1.5.1",
+    "react-native-safe-area-context": "^4.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
